++++++++++++++++++++++++
OFSwitch13 release notes
++++++++++++++++++++++++

This file contains OFSwitch13 release notes (most recent releases first).


Release 3.X.X (XXX XX, XXXX)
============================

- Updating OFSwitch13Device::Get* methods for improved datapath stats. The 
  GetFlowEntries, GetGroupEntries, and GetMeterEntries methods were replaced by
  GetFlowTableEntries, GetGroupTableEntries, and GetMeterTableEntries. The
  following new methods were included: GetDatapathTimeout, GetFlowTableUsage,
  GetGroupTableUsage, GetMeterTableUsage, GetNControllers, GetBufferEntries,
  GetBufferSize. The BufferUsage traced value was removed, but the method with
  the same can be used to get this value on demand.

- Improving OFSwitch13StatsCalculator with more statistics. It can now dump
  individual flow table stats. This feature is optional (disabled by default).
  The PipelineTableDetails attribute can be used to enable statistics for each
  pipeline flow table.

- This version is compatible with ofsoftswitch13 library release v3.X.x and
  ns-3 versions 3.28 or later (including patches). There is no backward
  compatibility with older ns-3 versions.


Release 3.3.0 (Sep 29, 2018)
============================

- Fix incorrect bitwise comparison when checking port configuration.

- Fix incorrect ns-3 version comparison that was preventing module
  configuration in ns-3.28.1

- Introducing a new OFSwitch13Device PipelineTables attribute, allowing a
  custom number of pipeline flow tables in the switch.
  
- The OFSwitch13Device PipelineTables, FlowTableSize, GroupTableSize, and
  MeterTableSize attributes must now be adjusted at construction time. You can
  use the OFSwitch13Helper::SetDeviceAttribute to accomplish this task.

- Renaming OFSwitch13Device::GetFlowEntries (void) to GetSumFlowEntries (void)
  and the OFSwitch13StatsCalculator::GetEwmaFlowEntries (void) to
  GetEwmaSumFlowEntries (void) to better describe that these methods return the