@@ -345,10 +345,10 @@ OFSwitch13Device
 
 * ``MeterTableSize``: The maximum number of entries allowed on meter table.
 
-* ``PipelineCapacity``: The data rate used to model the pipeline processing
-  capacity (throughput). Packets exceeding the capacity are discarded.
-
 * ``PipelineTables``: The number of pipeline flow tables.
+
+* ``ProcessingCapacity``: The data rate used to model the pipeline processing
+  capacity (throughput). Packets exceeding the capacity are discarded.
 
 * ``PortList``: The list of ports available in this switch.
 
@@ -425,11 +425,11 @@ statistics of an OpenFlow switch datapath. The instances of this class connect
 to a collection of trace sources in the switch device and periodically dumps
 the following datapath metrics on the output file:
 
-#. [``Load:kbps``] Pipeline load throughput in the last interval (kbits);
-#. [``Load:%``] Average pipeline load usage (percent);
+#. [``Load:kbps``] Processing load in the last interval (kbits);
+#. [``Load:%``] Average processing capacity usage (percent);
 #. [``Packets``]Packets processed by the pipeline in the last interval;
 #. [``Dly:us``] EWMA pipeline lookup delay for packet processing (usecs);
-#. [``LdDrops``] Packets dropped by pipeline load in the last interval;
+#. [``LdDrops``] Packets dropped by capacity overloaded in the last interval;
 #. [``MtDrops``] Packets dropped by meter bands in the last interval;
 #. [``FloMods``] Flow-mod operations executed in the last interval;
 #. [``MetMods``] Meter-mod operations executed in the last interval;
