@@ -41,7 +41,7 @@ OFSwitch13StatsCalculator::OFSwitch13StatsCalculator ()
   m_ewmaGroupEntries (0.0),
   m_ewmaMeterEntries (0.0),
   m_ewmaPipelineDelay (0.0),
-  m_ewmaPipelineLoad (0.0),
+  m_ewmaProcessingLoad (0.0),
   m_ewmaSumFlowEntries (0.0),
   m_bytes (0),
   m_lastFlowMods (0),
@@ -107,8 +107,8 @@ OFSwitch13StatsCalculator::HookSinks (Ptr<OFSwitch13Device> device)
       &OFSwitch13StatsCalculator::NotifyDatapathTimeout,
       Ptr<OFSwitch13StatsCalculator> (this)));
   device->TraceConnectWithoutContext (
-    "LoadDrop", MakeCallback (
-      &OFSwitch13StatsCalculator::NotifyLoadDrop,
+    "OverloadDrop", MakeCallback (
+      &OFSwitch13StatsCalculator::NotifyOverloadDrop,
       Ptr<OFSwitch13StatsCalculator> (this)));
   device->TraceConnectWithoutContext (
     "MeterDrop", MakeCallback (
@@ -153,9 +153,9 @@ OFSwitch13StatsCalculator::GetEwmaPipelineDelay (void) const
 }
 
 DataRate
-OFSwitch13StatsCalculator::GetEwmaPipelineLoad (void) const
+OFSwitch13StatsCalculator::GetEwmaProcessingLoad (void) const
 {
-  return DataRate (std::round (m_ewmaPipelineLoad));
+  return DataRate (std::round (m_ewmaProcessingLoad));
 }
 
 uint32_t
@@ -210,15 +210,15 @@ OFSwitch13StatsCalculator::GetAvgMeterTableUsage (void) const
 }
 
 uint32_t
-OFSwitch13StatsCalculator::GetAvgPipelineUsage (void) const
+OFSwitch13StatsCalculator::GetAvgProcessingUsage (void) const
 {
-  if (m_device->GetPipelineCapacity ().GetBitRate () == 0)
+  if (m_device->GetProcessingCapacity ().GetBitRate () == 0)
     {
       return 0;
     }
   return std::round (
-    static_cast<double> (GetEwmaPipelineLoad ().GetBitRate ()) * 100 /
-    static_cast<double> (m_device->GetPipelineCapacity ().GetBitRate ()));
+    static_cast<double> (GetEwmaProcessingLoad ().GetBitRate ()) * 100 /
+    static_cast<double> (m_device->GetProcessingCapacity ().GetBitRate ()));
 }
 
 uint32_t
@@ -312,8 +312,8 @@ OFSwitch13StatsCalculator::NotifyDatapathTimeout (
     + (1 - m_alpha) * m_ewmaMeterEntries;
   m_ewmaPipelineDelay = m_alpha * m_device->GetPipelineDelay ().GetDouble ()
     + (1 - m_alpha) * m_ewmaPipelineDelay;
-  m_ewmaPipelineLoad = m_alpha * m_device->GetPipelineLoad ().GetBitRate ()
-    + (1 - m_alpha) * m_ewmaPipelineLoad;
+  m_ewmaProcessingLoad = m_alpha * m_device->GetProcessingLoad ().GetBitRate ()
+    + (1 - m_alpha) * m_ewmaProcessingLoad;
 
   for (size_t i = 0; i < m_device->GetNPipelineTables (); i++)
     {
@@ -323,7 +323,7 @@ OFSwitch13StatsCalculator::NotifyDatapathTimeout (
 }
 
 void
-OFSwitch13StatsCalculator::NotifyLoadDrop (Ptr<const Packet> packet)
+OFSwitch13StatsCalculator::NotifyOverloadDrop (Ptr<const Packet> packet)
 {
   NS_LOG_FUNCTION (this << packet);
 
@@ -360,24 +360,24 @@ OFSwitch13StatsCalculator::DumpStatistics (void)
   uint64_t packetsIn  = m_device->GetPacketInCounter ();
   uint64_t packetsOut = m_device->GetPacketOutCounter ();
 
-  // We don't use the EWMA pipeline load here. Instead, we use the number of
+  // We don't use the EWMA processing load here. Instead, we use the number of
   // bytes transmitted since the last dump operation to get a precise average
-  // pipeline load.
+  // processing load.
   double elapSeconds = (Simulator::Now () - m_lastUpdate).GetSeconds ();
-  uint64_t pipeLoad = m_bytes * 8 / elapSeconds;
-  uint64_t pipeCapacity = m_device->GetPipelineCapacity ().GetBitRate ();
-  uint32_t pipeUsage = 0;
-  if (pipeCapacity)
+  uint64_t procLoad = m_bytes * 8 / elapSeconds;
+  uint64_t procCapy = m_device->GetProcessingCapacity ().GetBitRate ();
+  uint32_t procUsage = 0;
+  if (procCapy)
     {
-      pipeUsage = std::round (static_cast<double> (pipeLoad) * 100 /
-                              static_cast<double> (pipeCapacity));
+      procUsage = std::round (static_cast<double> (procLoad) * 100 /
+                              static_cast<double> (procCapy));
     }
 
   // Print statistics to file.
   *m_wrapper->GetStream ()
     << " " << setw (8)  << Simulator::Now ().GetSeconds ()
-    << " " << setw (12) << static_cast<double> (pipeLoad) / 1000
-    << " " << setw (7)  << pipeUsage
+    << " " << setw (12) << static_cast<double> (procLoad) / 1000
+    << " " << setw (7)  << procUsage
     << " " << setw (7)  << GetEwmaPipelineDelay ().GetMicroSeconds ()
     << " " << setw (7)  << m_packets
     << " " << setw (7)  << m_loadDrops
